[package]
name = "axumlib"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenvy = "0.15.7"
tokio-postgres = "0.7.13"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
